# resolvekit-backend

./: .dockerignore  .env.example  .env.local-deploy.example  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  README.md  SDK_INTEGRATION.md  SECURITY.md  alembic.ini  deep_research.txt  docker-compose.local-deploy.yml  docker-compose.prebuilt.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  llms.txt  main.py  plan.txt  pyproject.toml  spec.md  vectors.db
.claude/: memory.db
.github/: CODEOWNERS  dependabot.yml
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  model-router-state.json  schema.sql
agent/: config.py  database.py  main.py
alembic/: env.py
dashboard/: Dockerfile  README.md  eslint.config.js  index.html  next-env.d.ts  next.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: INDEX.md  README.md
ios_app_agent/: config.py  database.py  main.py
kb_service/: Dockerfile  auth.py  config.py  database.py  main.py  models.py  router.py  schemas.py
knowledge_bases/: Dockerfile  __init__.py  auth.py  config.py  database.py  main.py  models.py  router.py  schemas.py
scripts/: check_agent_docs.sh  check_openapi_sync.py  export_dashboard_openapi.py  export_openapi.py
tests/: test_agent_config_defaults.py  test_analytics_aggregation_contract.py  test_audit_router.py  test_audit_service.py  test_auth_middleware_sdk_client_token.py  test_auth_signup_router.py  test_chat_access_service.py  test_chat_localization_service.py  test_chat_message_size_limit.py  test_chat_runtime_profile.py  test_chat_theme_routes.py  test_chat_theme_service.py  test_chat_transport_contract.py  test_chat_ws_background_task_watch_contract.py  test_chat_ws_reconnect_continuity.py  test_chat_ws_redis_relay_contract.py  test_config_audit.py  test_config_models_lookup.py  test_connection_test.py  test_dashboard_api_base_url_contract.py  test_dashboard_apps_card_default_nav_contract.py  test_dashboard_chat_theme_defaults_contract.py  test_dashboard_functions_navigation_contract.py  test_dashboard_internal_boundary.py  test_dashboard_next_control_plane_contract.py  test_dashboard_onboarding_contract.py  test_dashboard_prisma_schema_contract.py  test_dashboard_route_scope_contract.py  test_dashboard_session_persistence_contract.py  test_dashboard_web_sdk_copilot_contract.py  test_function_eligibility_allowlist.py  test_ios_kb_upload_file_route.py  test_ios_sdk_github_link_contract.py  test_kb_crawling_images.py  test_kb_crawling_markdown.py  test_kb_crawling_scope.py  test_kb_crypto_import.py  test_kb_document_conversion.py  test_kb_embedding_profile_schema.py  test_kb_ingestion_dedup.py  (+54 more)
website/: .impeccable.md  Dockerfile  package-lock.json  package.json  tailwind.config.ts
(+508 files in other folders)
